--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "amzn/paapi5-php-sdk",
+    "name": "hkulekci/paapi5-php-sdk",
     "version": "1.0.0",
     "description": "ProductAdvertisingAPI 5.0 PHP SDK",
     "keywords": [
